[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sscanf = "0.1.4"

[[bin]]
name = "d01"
[[bin]]
name = "d02"
[[bin]]
name = "d03"
[[bin]]
name = "d04"
[[bin]]
name = "d05"
[[bin]]
name = "d06"
[[bin]]
name = "d07"
